improve trie